--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 filetype==1.0.5
-Flask==1.1.1
-flask_cors==3.0.9
-flask_limiter==1.0.1
-wand==0.5.7
-Werkzeug==0.16.0
+Flask
+flask_cors
+flask_limiter
+wand
+Werkzeug
 gunicorn==19.9.0
 timeout-decorator==0.5.0
 nudenet==2.0.9
+pytest
